used auto fill and fixed card font spacing dadn used flexbox in card

--- a/style.css
+++ b/style.css
@@ -248,7 +248,7 @@ article{
 }
 .cards{
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(15em,1fr));
+    grid-template-columns: repeat(auto-fill,minmax(20em,1fr));
     grid-auto-rows: 1fr;
     justify-content: center;
     gap:4rem;
@@ -259,8 +259,12 @@ height: 100%;
     background-color: rgba(245, 245, 220, 0.408);
     border-radius: 1rem;
     position: relative;
-   max-width: 500px;
-   max-height: 50vh;
+   /* max-width: 500px; */
+   /* max-height: 50vh; */
+   display: flex;
+   flex-direction: column;
+   gap:4em;
+   justify-content: center;
 }
 
 .card:not(.card.add-book):hover{
@@ -314,13 +318,14 @@ overflow: hidden;
 }
 .card .card-title{
     font-size: min(calc( 1.5vw + 1rem),2rem);
-    margin-bottom: 13%;
+    /* margin-bottom: 13%; */
       font-weight: 800;
       font-family: var(--heading-font);
+      letter-spacing: 3px;
 }
 .card .card-author{
     font-size: min(calc( 1.1vw + 1rem),1.5rem);
-    margin-bottom: 10%;
+    /* margin-bottom: 10%; */
       font-weight: 500;
       font-family: var(--body-font);
 }
@@ -329,6 +334,7 @@ overflow: hidden;
     font-family: var(--body-font);
   font-size: min(calc( 0.1vw + .8rem),1rem);
     color: var(--button-background);
+    letter-spacing: 2px;
 }
 .card-image{
     width:100%;
